# starpod

./: .gitignore  Cargo.toml  README.md  TODO.md  install.sh
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
crates/agent-sdk/: Cargo.toml
crates/agent-sdk/examples/: with_hooks.rs
crates/agent-sdk/src/: client.rs  compact.rs  error.rs  lib.rs  models.rs  options.rs  permissions.rs  pricing.rs  query.rs
crates/agent-sdk/src/defaults/: models.toml  pricing.toml
crates/agent-sdk/src/hooks/: mod.rs
crates/agent-sdk/src/providers/: anthropic.rs  bedrock.rs  gemini.rs  openai.rs
crates/agent-sdk/src/session/: mod.rs
crates/agent-sdk/src/tools/: executor.rs
crates/agent-sdk/src/types/: permissions.rs
crates/orion/: Cargo.toml
crates/orion-agent/src/: lib.rs
crates/orion-core/src/: config.rs  lib.rs
crates/orion-gateway/: Cargo.toml
crates/orion-gateway/src/: lib.rs  routes.rs  ws.rs
crates/orion-gateway/static/: index.html
crates/orion-session/src/: lib.rs
crates/orion-telegram/: Cargo.toml
crates/orion-telegram/src/: lib.rs
crates/orion/src/: main.rs  onboarding.rs
crates/starpod/: Cargo.toml  build.rs
crates/starpod-agent/: Cargo.toml
crates/starpod-agent/src/: lib.rs  nudge.rs  tools.rs
crates/starpod-auth/: Cargo.toml
crates/starpod-auth/src/: lib.rs  types.rs
crates/starpod-browser/: Cargo.toml
crates/starpod-browser/src/: lib.rs
crates/starpod-core/: Cargo.toml
crates/starpod-core/src/: config.rs  config_migrate.rs  deploy_manifest.rs  error.rs  instance.rs  lib.rs  workspace.rs
crates/starpod-cron/: Cargo.toml
crates/starpod-cron/src/: lib.rs  scheduler.rs  store.rs  types.rs
crates/starpod-db/: Cargo.toml
crates/starpod-db/migrations/: 001_init.sql
crates/starpod-db/src/: lib.rs  migrate.rs
crates/starpod-gateway/: Cargo.toml  build.rs
crates/starpod-gateway/src/: files.rs  lib.rs  routes.rs  settings.rs  system.rs  ws.rs
crates/starpod-hooks/: Cargo.toml
crates/starpod-hooks/src/: callback.rs  error.rs  event.rs  input.rs  lib.rs  output.rs  permissions.rs  runner.rs
crates/starpod-instances/: Cargo.toml
crates/starpod-instances/src/: client.rs  deploy.rs  monitor.rs
crates/starpod-memory/: Cargo.toml
crates/starpod-memory/migrations/: 001_init.sql
crates/starpod-memory/src/: store.rs  user_view.rs
crates/starpod-proxy/: Cargo.toml
crates/starpod-proxy/src/: ca.rs  host_match.rs  http.rs  lib.rs  mitm.rs  netns.rs  scan.rs  tier.rs  tunnel.rs
crates/starpod-session/: Cargo.toml
crates/starpod-session/src/: lib.rs
crates/starpod-skills/src/: lib.rs
crates/starpod-telegram/: Cargo.toml
crates/starpod-telegram/src/: lib.rs
crates/starpod-vault/: Cargo.toml
crates/starpod-vault/migrations/: 001_init.sql  002_secret_proxy.sql
crates/starpod-vault/src/: env.rs  known_hosts.rs  lib.rs  opaque.rs
crates/starpod/src/: auth.rs  main.rs  onboarding.rs
crates/starpod/tests/: cli.rs
docs/: architecture.md  cli-reference.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/api-reference/: chat.md  health.md  instances.md  memory.md  overview.md  sessions.md
docs/concepts/: cron.md  instances.md  memory.md  sessions.md  skills.md  tools.md  vault.md
docs/crates/: agent-sdk.md  orion-agent.md  orion-core.md  orion-cron.md  orion-gateway.md  orion-instances.md  orion-memory.md  orion-session.md  orion-skills.md  orion-telegram.md  orion-vault.md  starpod-agent.md  starpod-core.md  starpod-gateway.md  starpod-vault.md
docs/getting-started/: configuration.md  initialization.md  installation.md  quickstart.md
docs/integrations/: telegram.md  web-ui.md  websocket.md
web/: index.html  package-lock.json  package.json  vite.config.js
web/public/: demo.html  demo3.html
web/src/: App.jsx  main.js  style.css
web/src/components/: AuthGate.jsx  Chat.jsx  CronJobsView.jsx  FilesView.jsx  Header.jsx  InputBar.jsx  OnboardingGate.jsx  Sidebar.jsx  Welcome.jsx
web/src/components/onboarding/: StepIdentity.jsx
web/src/components/ui/: Icons.jsx  (+1 more)
web/src/contexts/: AppContext.jsx
web/src/lib/: api.js
(+8 files in other folders)
