[package]
name = "starpod-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Orchestrator for Starpod - wires agent-sdk + memory + session + vault"

[features]
default = []
embeddings = ["starpod-memory/embeddings"]
secret-proxy = ["starpod-vault/secret-proxy", "dep:starpod-proxy", "starpod-proxy/mitm"]
secret-proxy-netns = ["secret-proxy", "starpod-proxy/netns"]

[dependencies]
agent-sdk = { workspace = true }
starpod-core = { workspace = true }
starpod-memory = { workspace = true }
starpod-session = { workspace = true }
starpod-skills = { workspace = true }
starpod-cron = { workspace = true }
starpod-db = { workspace = true }
starpod-browser = { workspace = true }
starpod-vault = { workspace = true }
starpod-proxy = { workspace = true, optional = true }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
mime_guess = "2"
reqwest = { workspace = true, features = ["json"] }
htmd = "0.1"
lol_html = "2"
readability = { version = "0.3", default-features = false }

[dev-dependencies]
tempfile = "3"
async-trait = "0.1"
futures = "0.3"
