[package]
name = "starpod-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Opaque secret proxy for Starpod - intercepts outbound HTTP and swaps tokens for real values"

[features]
default = []
mitm = ["dep:rcgen", "dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile", "dep:webpki-roots"]
netns = ["dep:nix"]

[dependencies]
starpod-core = { workspace = true }
aes-gcm = "0.10"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt", "sync", "io-util", "macros"] }
bytes = "1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
reqwest = { workspace = true, features = ["json"] }

# Phase 3: MITM (optional)
rcgen = { version = "0.14", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
webpki-roots = { version = "0.26", optional = true }

# Phase 4: Network namespaces (optional, Linux only)
nix = { version = "0.29", features = ["sched", "net"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
